; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_usbgecko.c_usb_flashwrite.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_usbgecko.c_usb_flashwrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usb_flashwrite(i32 %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  store i32 1, i32* %9, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = bitcast i8* %12 to i64*
  store i64* %13, i64** %10, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @__usbgecko_exi_wait(i32 %14)
  br label %16

16:                                               ; preds = %60, %4
  %17 = load i32, i32* %9, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %16
  %20 = load i64, i64* %8, align 8
  %21 = add i64 %20, -1
  store i64 %21, i64* %8, align 8
  %22 = icmp ne i64 %20, 0
  br label %23

23:                                               ; preds = %19, %16
  %24 = phi i1 [ false, %16 ], [ %22, %19 ]
  br i1 %24, label %25, label %61

25:                                               ; preds = %23
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @__flashwritecommand(i32 %26, i32 21845, i64 170)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %44

29:                                               ; preds = %25
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @__flashwritecommand(i32 %30, i32 10922, i64 85)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %44

33:                                               ; preds = %29
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @__flashwritecommand(i32 %34, i32 21845, i64 160)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %44

37:                                               ; preds = %33
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* %6, align 4
  %40 = load i64*, i64** %10, align 8
  %41 = load i64, i64* %40, align 8
  %42 = call i32 @__flashwritecommand(i32 %38, i32 %39, i64 %41)
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %45, label %44

44:                                               ; preds = %37, %33, %29, %25
  store i32 0, i32* %9, align 4
  br label %60

45:                                               ; preds = %37
  %46 = call i32 @usleep(i32 20)
  %47 = load i32, i32* %5, align 4
  %48 = load i32, i32* %6, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %6, align 4
  %50 = call i32 @__flashreadcommand(i32 %47, i32 %48, i64* %11)
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %58

52:                                               ; preds = %45
  %53 = load i64, i64* %11, align 8
  %54 = load i64*, i64** %10, align 8
  %55 = getelementptr inbounds i64, i64* %54, i32 1
  store i64* %55, i64** %10, align 8
  %56 = load i64, i64* %54, align 8
  %57 = icmp ne i64 %53, %56
  br i1 %57, label %58, label %59

58:                                               ; preds = %52, %45
  store i32 0, i32* %9, align 4
  br label %59

59:                                               ; preds = %58, %52
  br label %60

60:                                               ; preds = %59, %44
  br label %16

61:                                               ; preds = %23
  %62 = load i32, i32* %5, align 4
  %63 = call i32 @EXI_Unlock(i32 %62)
  %64 = load i32, i32* %9, align 4
  ret i32 %64
}

declare dso_local i32 @__usbgecko_exi_wait(i32) #1

declare dso_local i32 @__flashwritecommand(i32, i32, i64) #1

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @__flashreadcommand(i32, i32, i64*) #1

declare dso_local i32 @EXI_Unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
